Thu Aug  5 18:36:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (nucomp_marshal_load): should check the argument.
	  [ruby-core:31622]

	* rational.c (nurat_marshal_load): ditto

Mon Aug  2 16:34:32 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread_win32.c (native_thread_join): need to wait thread, of course.
	  [ruby-dev:41911]

Mon Aug  2 12:22:22 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (file_expand_path): wrong condition. [ruby-core:31591]

Thu Jul 29 02:38:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: not [freebsd] but [freebsd*] for AS_CASE.

Mon Jul 26 13:52:25 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: define BROKEN_CLOSE only on FreeBSD.
	  This needs to merge to 1.9.2.

Mon Jul 26 11:51:01 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: define BROKEN_CLOSE on FreeBSD.
	  This fixes build failure on MSVC. [ruby-core:31481]

	* include/ruby/ruby.h, include/ruby/missing.h:
	  use BROKEN_CLOSE for replacing close(2).

Mon Aug  2 00:03:18 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* util.c (ruby_add_suffix): fixed a bug returning uninitialized value.
	  This is the essential part from r28794 of trunk.

Mon Jul 26 13:01:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): should mark iseq itself other than normal
	  iseq.  [ruby-dev:41880]

Mon Jul 26 09:51:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): mark only self of normal iseqs, not
	  nodes.  [ruby-dev:41874]

Sun Aug  1 10:23:48 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/irb/init.rb (IRB.parse_opts): set VERBOSE to true when debug
	  switch called in irb.  a patch from Andrew Grimm in
	  [ruby-core:31558].

Sun Aug  1 09:35:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* bignum.c (big_op): comparison of bignum and infinity has returned 1
	  or -1, but it must return boolean.

Wed Jul 21 15:22:17 2010  Evan Phoenix <evan@fallingsnow.net>
